--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -554,8 +554,7 @@ a {
  flex-direction: row;
 }
 
-/* footer__content-right */
-
+/* footer */
 .footer .menu-list {
   display: flex;
   flex-direction: column;
@@ -584,6 +583,10 @@ a {
   margin-bottom: 1.875rem;
 }
 
+.footer-about .nav-menu .item,
+.footer-locale{
+  margin-bottom: 2rem;
+}
 
 .footer-locale {
   width: 70%;
@@ -643,10 +646,14 @@ a {
   }
   .footer-about .nav-menu {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     justify-items: start;
-    align-items: center;
+    align-items: end;
     padding-bottom: 0;
+  }
+  .footer-locale {
+    grid-area: 1/2;
   }
 
 }
@@ -779,14 +786,33 @@ a {
   .footer-content .card{
     grid-column: 1/3;
   }
-    .footer-rule .menu-list {
-      display: grid;
-      grid-template-columns: repeat(5, 1fr);
-    }
-
     .footer-about .menu-list {
       flex-direction: row;
     }
+
+    .footer-about .nav-menu {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: unset;
+      justify-items: start;
+      align-items: end;
+      padding-bottom: 0;
+    }
+    .footer-locale {
+      grid-area: 1/3;
+    }
+    .footer-about .nav-menu .item {
+      /* margin-bottom: ; */
+  }
+  .footer-about .menu-list {
+    margin-bottom: 2rem;
+  }
+  .footer-about .list-item {
+    padding-bottom: 0;
+  }
+  .footer-locale{
+    justify-content: flex-end;
+  }
 }
 
 /*Tablet(1024 x 768)*/
