--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -487,7 +487,7 @@ a {
 
 .cta .card-footer {
   background-image: url(../img/BG.png);
-  background-position: -1000px;
+  background-position: 62.5rem;
   background-repeat: no-repeat;
   /* background-position-x: right; */
   background-position-y: -1rem;
