--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -483,7 +483,7 @@ a {
 /* Cta__card-footer */
 /* button */
 .cta-content .card-footer .btn {
-  margin-bottom: 24px;
+  margin-bottom: 1.5rem;
 }
 
 
