--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -693,6 +693,27 @@ a {
     .card-body {
       margin-bottom: 1.5rem;
     }
+
+  /******************/
+  /* footer */
+  .footer-content {
+    grid-template-columns: repeat(2,1fr);
+  }
+  .footer-content .card{
+    grid-column: 1/3;
+  }
+  .footer-about .nav-menu {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    justify-items: start;
+    align-items: end;
+    padding-bottom: 0;
+  }
+  .footer-locale {
+    grid-area: 1/2;
+  }
+
 }
 
 /*Vertical iPad(768 x 1024)*/
@@ -839,6 +860,42 @@ a {
   .cta-content .card-footer {
     background-image: none;
     width: 60%;
+  }
+
+  /******************/
+  /* footer */
+  .footer-content {
+    grid-template-columns: repeat(6,1fr);
+  }
+  .footer-content .card{
+    grid-column: 1/3;
+  }
+    .footer-about .menu-list {
+      flex-direction: row;
+    }
+
+    .footer-about .nav-menu {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: unset;
+      justify-items: start;
+      align-items: end;
+      padding-bottom: 0;
+    }
+    .footer-locale {
+      grid-area: 1/3;
+    }
+    .footer-about .nav-menu .item {
+      /* margin-bottom: ; */
+  }
+  .footer-about .menu-list {
+    margin-bottom: 2rem;
+  }
+  .footer-about .list-item {
+    padding-bottom: 0;
+  }
+  .footer-locale{
+    justify-content: flex-end;
   }
 }
 
