--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -575,7 +575,7 @@ a {
   flex-direction: column;
 }
 .footer .menu-list>.item{
-  padding-bottom: 20px;
+  padding-bottom: 1.25rem;
   font-weight: var(--font-weight-bold);
 }
 .footer .list-item {
