--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -690,6 +690,10 @@ a {
   .footer-content .card{
     grid-column: 1/3;
   }
+
+  .footer-about {
+    padding-top: 0;
+  }
   .footer-about .nav-menu {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -706,7 +710,6 @@ a {
 
 /*Vertical iPad(768 x 1024)*/
 @media screen and (min-width: 768px) {
-  
   .service-left .card-text {
     font-size: var(--font-size-large);
     line-height: var(--line-height-xx-large);
@@ -820,7 +823,7 @@ a {
     flex-direction: row;
     align-items: flex-end;
   }
-  .marketing-content .card.card-img {
+
   .card-horizontal {
     margin-top: 2rem;
   }
@@ -834,49 +837,19 @@ a {
     grid-row: 1/4;
   }
 
-  /******************/
-  /* footer */
-  .footer-content {
-    grid-template-columns: repeat(6,1fr);
+  /************************/
+  /* cta */
+  .cta .container {
+    margin-bottom: 7.5rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
-  .footer-content .card{
-    grid-column: 1/3;
-  }
-    .footer-about .menu-list {
-      flex-direction: row;
-    }
-
-    .footer-about .nav-menu {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: unset;
-      justify-items: start;
-      align-items: end;
-      padding-bottom: 0;
-    }
-    .footer-locale {
-      grid-area: 1/3;
-    }
-    .footer-about .nav-menu .item {
-      margin-right: 1.25rem;
-      text-align: center;
-  }
-
-  .footer-about .menu-list {
-    flex-direction: row;
-    margin-bottom: 2rem;
+  .cta .cta-content {
     align-items: center;
   }
-  .footer-about .list-item {
-    padding-bottom: 0;
+  .cta .card-body {
+    margin:0;
   }
-
-  .footer-locale {
-    grid-area: 1/3;
-    justify-content: flex-end;
-
-  }
-  /* cta*/
   .cta-content {
     flex-direction: row;
     background-image: url(../img/BG.png);
@@ -897,26 +870,18 @@ a {
   .footer-content .card{
     grid-column: 1/3;
   }
-    .footer-about .menu-list {
-      flex-direction: row;
-    }
 
-    .footer-about .nav-menu {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: unset;
-      justify-items: start;
-      align-items: end;
-      padding-bottom: 0;
-    }
-    .footer-locale {
-      grid-area: 1/3;
-    }
-    .footer-about .nav-menu .item {
-      /* margin-bottom: ; */
-  }
   .footer-about .menu-list {
+    flex-direction: row;
     margin-bottom: 2rem;
+  }
+  .footer-about .menu-list .item{
+    margin-right: 2rem;
+  }
+  .footer-about .nav-menu {
+    grid-template-columns: 1fr auto 1fr;
+    grid-template-rows: unset;
+    padding-bottom: 0;
   }
   .footer-about .list-item {
     padding-bottom: 0;
@@ -924,10 +889,9 @@ a {
 
   .footer-locale {
     grid-area: 1/3;
-  }
-  .footer-locale {
     justify-content: flex-end;
   }
+
 }
 
 /*Tablet(1024 x 768)*/
@@ -954,19 +918,7 @@ a {
     margin-bottom: 7.5rem;
   }
 
-  /************************/
-  /* cta */
-  .cta .container {
-    margin-bottom: 7.5rem;
-    padding-left: 5rem;
-    padding-right: 5rem;
-  }
-  .cta .cta-content {
-    align-items: center;
-  }
-  .cta .card-body {
-    margin:0;
-  }
+
 }
 
 @media screen and (min-width: 1240px) {
