--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -592,18 +592,18 @@ a {
   align-items: center;
 }
 
-.footer-about .menu-list>.item {
+.footer-rule .menu-list>.item {
   color: var(--bauhaus);
   letter-spacing: 0.2px;
   padding: 0;
   margin-bottom: 1.875rem;
 }
 
-.footer-about {
+.footer-rule {
   padding-top: 2rem;
 }
 
-.footer-about .item,
+.footer-rule .item,
 .footer-locale{
   margin-bottom: 2rem;
 }
@@ -691,10 +691,10 @@ a {
     grid-column: 1/3;
   }
 
-  .footer-about {
+  .footer-rule {
     padding-top: 0;
   }
-  .footer-about .nav-menu {
+  .footer-rule .nav-menu {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -871,21 +871,21 @@ a {
     grid-column: 1/3;
   }
 
-  .footer-about .menu-list {
+  .footer-rule .menu-list {
     flex-direction: row;
     margin-bottom: 2rem;
   }
-  .footer-about .menu-list .item{
+  .footer-rule .menu-list .item{
     margin-right: 2rem;
   }
 
-  .footer-about .nav-menu {
+  .footer-rule .nav-menu {
     grid-template-columns: 1fr auto 1fr;
     grid-template-rows: unset;
     padding-bottom: 0;
   }
 
-  .footer-about .list-item {
+  .footer-rule .list-item {
     padding-bottom: 0;
   }
 
