--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -509,7 +509,7 @@ a {
   color: var(--black);
 }
 
-.btn--chevron {
+.cta .btn-primary {
   border-radius: none;
   width: 198px;
   height: 64px;
@@ -517,10 +517,11 @@ a {
   filter: drop-shadow(0px 1.5rem 2rem rgba(0, 0, 0, 0.1));
 }
 
-.btn--chevron:hover {
+.cta .btn-primary:hover {
   background-color: var(--crab-nebula);
   color: var(--white);
   border: none;
+  opacity: 1;
 }
 
 /* span */
