--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -595,20 +595,20 @@ a {
   color: var(--bauhaus);
   letter-spacing: 0.2px;
   padding: 0;
-  margin-bottom: 1.875rem;
+  margin-bottom: 2rem;
 }
 
 .footer-rule {
   padding-top: 2rem;
 }
 
-.footer-rule .item,
-.dropdown{
+.footer-rule .item{
   margin-bottom: 2rem;
 }
 
 .dropdown {
   width: 70%;
+  margin-bottom: 2rem;
   display: flex;
   justify-content: flex-start;
   margin-top: 1.875rem;
@@ -704,10 +704,9 @@ a {
     align-items: end;
     padding-bottom: 0;
   }
-  .dropdown {
+  .footer-rule .dropdown {
     grid-area: 1/2;
   }
-
 }
 
 /*Vertical iPad(768 x 1024)*/
@@ -891,7 +890,7 @@ a {
     padding-bottom: 0;
   }
 
-  .dropdown {
+  .footer-rule .dropdown {
     grid-area: 1/3;
     justify-content: flex-end;
   }
